static/core/css/services.css
.tentacle-img-left{
    top: 4020px;
}

.tentacle-img-right{
    top: 819px;
}

.cube-img-left{
    top: 0;
}

.circle-img-left{
    top: 36%;
}

.cube-img-right{
    top: 2426px;
}

.stack-grid{
    margin-top: 30px;
    margin-bottom: 30px;
}

@media (max-width: 992px) {
    .tentacle-img-left{
        top: 5624px;
        max-width: 100%;
        width: 20%;
        height: auto;
    }

    .circle-img-left{
        top: 37%;
    }
}
@media (min-width: 992px) and (max-width: 1200px){
    .tentacle-img-left{
        top: 4123px;
        max-width: 100%;
        width: 20%;
        height: auto;
    }

    .circle-img-left{
        top: 35.5%;
    }
}

@media  (max-width: 1200px){
    .cube-img-left {    
        top: 12rem;
        max-width: 30%;
        height: auto;
    }

    .tentacle-img-right{
        top: 15%;
        max-width: 25%;
        height: auto;
    }

    .cube-img-right{
        top: 52%;
    }
}



@media (max-width: 768px) {
    .card-img-top {
        object-fit: cover;
        
    }
}

